# echelon-py

./: .gitignore  Makefile  README-dev.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: python-publish.yml
Reference/: one-dim-demo.ipynb
docs/: .buildinfo  CHANGELOG.html  Makefile  algorithms.html  algorithms.rst  conf.py  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js  undoc.pickle
docs/.doctrees/: algorithms.doctree  environment.pickle
docs/_images/: graphviz-0e11ab49cab195efcc42442640ae42713c1ae104.png.map  graphviz-99cdb65b413de973c24ec8fac7d0a2288ccce0ee.png.map  graphviz-ca7887cf85c5e0cf0d5168dc084d453c6dc5d788.png.map
docs/_modules/: index.html
docs/_sources/: CHANGELOG.md.txt
docs/src/: echelon.algorithms.find_echelon_clusters.html  echelon.algorithms.find_echelon_hierarchy.html  echelon.algorithms.find_echelon_hotspots.html  echelon.algorithms.find_foundation_echelons.html  echelon.algorithms.find_peak_echelons.html  echelon.algorithms.html  echelon.algorithms.rst  echelon.algorithms.util.html  echelon.api.base.html  echelon.api.html  echelon.api.ndarray_api.html  echelon.api.rst  echelon.contrib.geo.html  echelon.html  echelon.oracle.html  echelon.rst  echelon.scan_oracle.html  echelon.test.html  echelon.typing.html  modules.html  setup.html
docs_src/: conf.py  docstr-coverage-output.txt  index.rst  make.bat
docs_src/src/: echelon.algorithms.find_echelon_clusters.rst  echelon.algorithms.rst  (+9 more)
echelon/: algorithms.py  api.py  oracle.py  scan_oracle.py  test.py  typing.py
(+125 files in other folders)
