[metadata]
name = echelon-py
version = attr: echelon.__version__
author = Takeshi Teshima
author-email = takeshi.diadochos@gmail.com
maintainer = Takeshi Teshima
maintainer-email = takeshi.diadochos@gmail.com
summary = Echelon analysis in Python
description-file = README.md
home-page = https://github.com/takeshi-teshima/echelon-py

# Classifiers help users find your project by categorizing it.
# For a list of valid classifiers, see https://pypi.org/classifiers/
# How mature is this project? Common values are
#   3 - Alpha
#   4 - Beta
#   5 - Production/Stable
classifier =
  Development Status :: 3 - Alpha
  Intended Audience :: Science/Research
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: Apache2.0 License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only

keywords =
    echelon
    cluster
    spatio-temporal data

# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[files]
packages =
    echelon

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --doctest-modules